--- a/jakartaee/src/main/resources/archetype-resources/Dockerfile
+++ b/jakartaee/src/main/resources/archetype-resources/Dockerfile
@@ -1,5 +1,5 @@
 # NOTE: Before you can create a container you need to run `mvn package` to create the web archives that are used here.
-FROM open-liberty:19.0.0.12-full-java8-openj9
+FROM openliberty/open-liberty:20.0.0.3-full-java8-openj9-ubi
 
 COPY --chown=1001:0 src/main/liberty/config /config/
 COPY --chown=1001:0 target/${artifactId}.war /config/apps
